# self

./: .gitmodules  CMakeLists.txt  README.md  TODOlist.md  conanfile.txt
examples/: fake.me  main.cp  main.me  test.cp  test.me  test2.me
include/: backend_config.hpp  builtins.hpp  container_types.hpp  cp.hpp  error_handling.hpp  ffi_parse.hpp  fsa_parser.hpp  lexer.hpp  literals.hpp  pair_range.hpp  scope_guard.hpp  selfc.hpp  syntax_tree.hpp  tmp_ostream.hpp
include/ast/: Index.hpp  control.hpp  expression.hpp  expression_tree.hpp  functions.hpp  literal.hpp  struct_def.hpp  tuple.hpp  unevaluated_expression.hpp  variables.hpp  visitor.hpp
include/utility/: bumpalloc.hpp  pair_range.hpp
reference/: builtins.md
src/: CMakeLists.txt  ast.cpp  backend_config.cpp  codegen.cpp  complete_types.cpp  ffi_parse.cpp  fsa_parser.cpp  lexer.cpp  selfc.cpp
src/ast/: CMakeLists.txt
src/codegen/: CMakeLists.txt  codegen.cpp
src/codeparser/: CMakeLists.txt  blocks.cpp  declarations.cpp  expression.cpp  expressions.cpp  externs.cpp  fsa_parser.cpp  lexer.cpp  parser.cpp  parser.hpp  structs.cpp
src/exe/: CMakeLists.txt  selfc.cpp
src/ffiparser/: CMakeLists.txt
stdlib/: CMakeLists.txt  io.c
stdlib/include/: io.h
tests/: CMakeLists.txt  IR_test.cpp  bumpalloc.cpp  clang_parse.cpp  cstd_test.c  error_test.cpp  exprfolding.cpp  ffi_test.cpp  integration_test.cpp  lex_test.cpp  regex_test.cpp  rva_test.cpp  sml_test.cpp
tutorial/: First.md
